--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
             href="https://leanpub.com/js-next"
             >writing a brand new book about <strong>JavaScript</strong> on the
             edge</a>. It’s about all the cool things that are coming up next in
-            <strong>JavaScript</strong>. It’s a work in progress, and as of now
-            it’s <a href="https://leanpub.com/js-next"
-            >free to read online</a>.</p>
+            <strong>JavaScript</strong>. It’s a work in progress, <a
+            href="https://leanpub.com/js-next"
+            >you can register here to get notified when it is published</a>.</p>
 
             <h3>JavaScript Interview Questions</h3>
 
