Minor grammar fix.

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
             <p>You would not want your service to be unusable at precisely the wrong time<br>
                 — while everyone is watching — would you? <strong>;)</strong><br>
-            My talk on <strong>Node.JS</strong>, <strong>performance</strong>, <strong>scalability</strong>, <strong>complexity</strong>,<br>
+            Then see my talk on <strong>Node.JS</strong>, <strong>performance</strong>, <strong>scalability</strong>, <strong>complexity</strong>,<br>
                 and <strong>consistency</strong> at <a href="http://conferences.oreilly.com/fluent/javascript-html-us/public/schedule/detail/46028"><strong>O’Reilly Fluent Conf</strong>, early 2016</a>.</p>
 
             <p>I’d love to chat with you if you happen to be there.</p>
