--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<style>
             body {
-                font-family: "Apres RE", Georgia, serif;
+                font-family: "Georgia Pro", Georgia, serif;
                 line-height: 1.85em;
                 color: #000;
                 background: #fefefe url(/bg);
@@ -228,14 +228,14 @@
 
     <article id="Main" class="flex-item-main">
         <header>
-            <h1>Hi! I&#039;m Volkan Özçelik</h1>
+            <h1>Hi! I’m Volkan Özçelik</h1>
             <p style="text-align:right;padding-right:2em;"><em>Jack of all Trades, Samurai of <strong>JavaScript</strong></em></p>
         </header>
 
         <section>
         	<h2>About Me</h2>
 
-            <p>I&#039;ve been in the industry <strong>since 2003</strong>;<br>
+            <p>I’ve been in the industry <strong>since 2003</strong>;<br>
             and this is the place where I brag about all the cool stuff I do.</p>
 
             <p>So far, I’ve created mobile and web front-ends; played with SQL/NoSQL data stores;
@@ -244,8 +244,8 @@
 
             <blockquote>
             <p>Some call this being a “<em>fullstack developer</em>”, or
-            a “<em>unicorn developer</e,>”.
-            And although I love unicorns, I don&apos;t call myself as such:</p>
+            a “<em>unicorn developer</em>”.
+            And although I love unicorns, I don’t call myself as such:</p>
 
             <blockquote>
             <p>I am an <strong>engineeer</strong> and I solve
@@ -280,7 +280,7 @@
         <section>
             <h2>I Talk</h2>
 
-            <p>I love to talk about&hellip;</p>
+            <p>I love to talk about…</p>
 
             <ul>
             <li><strong>Performance</strong> Engineering;</li>
@@ -363,7 +363,7 @@
             href="https://speakerdeck.com/volkan/javascript-widget-development-best-practices"
             >JavaScript Widget Development Best Practices
             &raquo;&raquo;</a></dt>
-            <dd>A conference about widget development that I&#039;ve given at
+            <dd>A conference about widget development that I’ve given at
             <strong><a href="http://jstanbul.org/2012/">JStanbul
             2012</a></strong>.</dd>
 
@@ -394,7 +394,7 @@
             hundred technical
             interviews on <strong>JavaScript Engineering</strong>,
             <strong>Front-End Development</strong>, and related positions.
-            So, rather than giving some HR Manager&#039;s perspective on what
+            So, rather than giving some HR Manager’s perspective on what
             interviews should look like, I wanted to hand over the reader the
             <strong>red pill</strong>
             and tell what the <strong>JavaScript Engineering</strong> interviews
