Changed the index file.
Since o2.js is kinda sorta abandoned (at least for now),
it does not make sense to mention it on the page.

I remove the reference, and added a reference to my
GitHub profile instead.

--- a/index.html
+++ b/index.html
@@ -415,11 +415,12 @@
             </ul>
 
             <p>Oh, by the way, <a
-            href="http://github.com/v0lkan/o2.js">o2.js</a> is a
-            <strong>JavaScript Framework</strong> that I have been<br>
-            maintaining as a side project,
-            along with <a href="http://github.com/v0lkan">many other side
-            projects</a>.</p>
+            href="https://o2js.com/reference/personal/my-side-projects"
+            >I am a relentless <strong>side projector</strong></a> and I keep
+            most of my side project <a href="https://github.com/v0lkan">on 
+           <strong>GitHub</strong></a>. So if you want to contribute, or share 
+           your comments and suggestions, you are more than welcome to do so.
+           </p>
         </section>
 
         <nav>
