updated the index.

--- a/index.html
+++ b/index.html
@@ -297,12 +297,21 @@
         <section>
             <h2>My Talks</h2>
 
-            <h3>Coming Up Next…</h3>
+            <!--h3>Coming Up Next…</h3>
 
-            <p>You would not want your service to be unusable at precisely the wrong time<br>
+            <p></p-->
+          
+           <h3>Current Talk</h3>
+
+           <dl>
+           <dt><a href="https://speakerdeck.com/volkan/scaling-your-node-dot-js-api-like-a-boss"><strong>Scaling</strong> Your <strong>Node.JS</strong> API Like a Boss</a></dt>
+           <dd>You would not want your service to be unusable at precisely the wrong time<br>
                 — while everyone is watching — would you? <strong>;)</strong><br>
             Then see my talk on <strong>Node.JS</strong>, <strong>performance</strong>, <strong>scalability</strong>, <strong>complexity</strong>,<br>
-                and <strong>consistency</strong> at <a href="http://conferences.oreilly.com/fluent/javascript-html-us/public/schedule/detail/46028"><strong>O’Reilly Fluent Conf</strong>, early 2016</a>.</p>
+                and <strong>consistency</strong> at <a href="http://conferences.oreilly.com/fluent/javascript-html-us/public/schedule/detail/46028"><strong>O’Reilly Fluent Conf, 2016</strong></a>.<br>
+            You can also <a
+            href="https://github.com/v0lkan/talks/tree/master/fluentconf">download the accompanying <strong>source code</strong></a>.</dd>
+           </dl>
 
             <p>I’d love to chat with you if you happen to be there.</p>
 
@@ -312,7 +321,7 @@
 
             <dl>
             <dt><a href="https://speakerdeck.com/volkan/the-secrets-of-high-performance-mobile-javascript-applications">The Secrets of <strong>High
-            Performance</strong><br>
+            Performance</strong> 
             Mobile <strong>JavaScript</strong> Applications
             &raquo;&raquo;</a></dt>
             <dd>Learn the rules like a pro, so that you can break them like an
@@ -327,8 +336,7 @@
             href="http://forwardjs.com"><strong>#forwardjs</strong>
             2014</a></em>/;<br>
             You can also <a
-            href="https://github.com/v0lkan/talks/tree/master/html5devconf">down
-            load the accompanying <strong>source code</strong></a>.</dd>
+            href="https://github.com/v0lkan/talks/tree/master/html5devconf">download the accompanying <strong>source code</strong></a>.</dd>
 
             <dt><a
             href="https://speakerdeck.com/volkan/the-modern-hackers-guide-to-the-universe">The Modern Hacker&#39;s Guide to The Universe
@@ -373,7 +381,7 @@
         <section>
             <h2>I Write</h2>
 
-            <h3>JavaScript on the Edge</h3>
+            <!--h3>JavaScript on the Edge</h3>
 
             <p>I recently started <a
             href="https://leanpub.com/js-next"
@@ -381,12 +389,12 @@
             edge</a>. It’s about all the cool things that are coming up next in
             <strong>JavaScript</strong>. It’s a work in progress, <a
             href="https://leanpub.com/js-next"
-            >you can register here to get notified when it is published</a>.</p>
+            >you can register here to get notified when it is published</a>.</p-->
 
             <h3>JavaScript Interview Questions</h3>
 
             <p>I have a book about <strong><a
-            href="http://o2js.com/interview-questions">JavaScript Interview
+            href="https://o2js.com/interview-questions">JavaScript Interview
             Questions</a></strong>;
             and here is its story:</p>
 
@@ -402,17 +410,44 @@
             </blockquote>
 
             <ul class="pushdown" >
-            <li><a href="http://o2js.com/interview-questions/">learn more about
+            <li><a href="https://o2js.com/interview-questions/">learn more about
             my journey &raquo;&raquo;</a></li>
             </ul>
-            <p>I also have a mostly <strong>JavaScript</strong>-related
+
+            <p>Additionally, <a href="https://o2js.com/">I write occasional 
+            articles on my personal blog</a>; I did technical editing for a bunch
+            of books; I publish articles, and write guest blog posts on
+            various places.</p>
+           
+            <blockquote><strong>Aside</strong><br><br>
+            Nowadays, I am more into <strong>videocasting</strong>.<br><br>
+
+            I feel like times have changed, and we’ve started to 
+            prefer to consume audiovisual content to reading books. —
+            I find this, kind of, <em>sad</em>; yet, it’s a side effect
+            of our progressive evolution. — Maybe books will become more
+            <strong>visual</strong>, and more <strong>interactive</strong>
+            in the near future; who knows <strong>:)</strong><br><br>
+            To adapt the change, the majority of my 
+            “<em>writing time</em>” now goes to editing videos.<br>
+            Yet, they are not ready yet; 
+            I’ll share them here too, when I finish them.</blockquote>
+
+
+            <!--p>I also have a mostly <strong>JavaScript</strong>-related
             technical blog <a
             href="http://o2js.com"><strong>o2js.com</strong></a> that I
-            regularly update.</p>
+            regularly update.</p-->
 
-            <ul class="pushdown" >
+            <!--ul class="pushdown" >
             <li><a href="http://o2js.com/">read my blog &raquo;&raquo;</a></li>
-            </ul>
+            </ul-->
+         </section>
+
+         <section>
+            <h2>I {[Code]}</h2>
+
+            <h3>Side Projects</h3>
 
             <p>Oh, by the way, <a
             href="https://o2js.com/reference/personal/my-side-projects"
@@ -427,11 +462,13 @@
             <h2>Other Places to Find Me</h2>
 
             <ul class="pushdown">
-            <li><a href="http://github.com/v0lkan/">See My Recent Work on
+            <li><br><a href="http://github.com/v0lkan/">See My Recent Work on
             <strong>github</strong> &raquo;&raquo;</a></li>
             <li><a href="http://linkedin.com/in/volkanozcelik">Contact Me on
             <strong>LinkedIn</strong> &raquo;&raquo;</a></li>
             </ul>
+
+            <p>&nbsp;</p>
         </nav>
     </article>
     <footer>
