added recent stuff that I am doing.

--- a/index.html
+++ b/index.html
@@ -278,6 +278,13 @@
         </section>
 
         <section>
+            <h2>I Cast</h2>
+
+            <p>I weekly publish <a href="https://www.youtube.com/channel/UC8OLZSlFO8cwRo9M30v-TkA"><strong>Byte-Sized JavaScript</strong></a>:<br>
+            a short (<em>~5min per episode</em>), yet information-packed, screencast about <strong>JavaScript</strong> and <strong>related technologies</strong>.</p>
+        </section>
+
+        <section>
             <h2>I Talk</h2>
 
             <p>I love to talk about…</p>
@@ -301,25 +308,26 @@
 
             <p></p-->
           
-           <h3>Current Talk</h3>
+           <!--h3>Current Talk</h3>
 
            <dl>
-           <dt><a href="https://speakerdeck.com/volkan/scaling-your-node-dot-js-api-like-a-boss"><strong>Scaling</strong> Your <strong>Node.JS</strong> API Like a Boss</a></dt>
-           <dd>You would not want your service to be unusable at precisely the wrong time<br>
-                — while everyone is watching — would you? <strong>;)</strong><br>
-            Then see my talk on <strong>Node.JS</strong>, <strong>performance</strong>, <strong>scalability</strong>, <strong>complexity</strong>,<br>
-                and <strong>consistency</strong> at <a href="http://conferences.oreilly.com/fluent/javascript-html-us/public/schedule/detail/46028"><strong>O’Reilly Fluent Conf, 2016</strong></a>.<br>
-            You can also <a
-            href="https://github.com/v0lkan/talks/tree/master/fluentconf">download the accompanying <strong>source code</strong></a>.</dd>
            </dl>
 
-            <p>I’d love to chat with you if you happen to be there.</p>
-
-            <h3>Past Talks</h3>
+            <p>I’d love to chat with you if you happen to be there.</p-->
 
             <p>Here are some of the talks I’ve given so far:</p>
 
             <dl>
+            <dt><a href="https://speakerdeck.com/volkan/scaling-your-node-dot-js-api-like-a-boss"><strong>Scaling</strong> Your <strong>Node.JS</strong> API Like a Boss</a></dt>
+            <dd>You would not want your service to be unusable at precisely the wrong time<br>
+                — while everyone is watching — would you? <strong>;)</strong><br>
+            Then <a href="https://www.youtube.com/playlist?list=PLq0_AbMvuYAkiCKRI3JhWq56r90pR3k-p">watch a video recording of my talk O’Reilly Fluent Conf talk</a><br>
+            on <strong>Node.JS</strong>, <strong>performance</strong>, <strong>scalability</strong>, <strong>complexity</strong>
+                and <strong>consistency</strong>.<br>
+            <a href="http://conferences.oreilly.com/fluent/javascript-html-us/public/schedule/detail/46028">Here’s the talk’s official page</a> that gives some additional information.<br>
+            You can also <a
+            href="https://github.com/v0lkan/talks/tree/master/fluentconf">download the accompanying <strong>source code</strong></a>, if you like.</dd>
+
             <dt><a href="https://speakerdeck.com/volkan/the-secrets-of-high-performance-mobile-javascript-applications">The Secrets of <strong>High
             Performance</strong> 
             Mobile <strong>JavaScript</strong> Applications
