--- a/index.html
+++ b/index.html
@@ -340,14 +340,14 @@
             href="http://hack4good.io"><strong>#hack4good</strong> 0.5</a>.</dd>
             <dt><a
             href="https://speakerdeck.com/volkan/mobile-application-performance-
-            tips">Mobile Application Performance Tips &raquo;&raquo;</a></dt>
+            tips">Mobile Application Performance Tips »»</a></dt>
             <dd>A talk that I gave at <a href="http://hack4good.io/">#hack4good
             0.2</a>.</dd>
 
             <dt><a
             href="https://speakerdeck.com/volkan/efficient-javascript">Efficient
-            JavaScript @udemy &raquo;&raquo;</a></dt>
-            <dd>A 3-hour <strong>workshop</strong> that I&#039;ve given to
+            JavaScript @udemy »»</a></dt>
+            <dd>A 3-hour <strong>workshop</strong> that I’ve given to
             <strong><a href="http://udemy.com>">udemy</a></strong>
             engineers;<br>
             <a href="https://github.com/v0lkan/talks/tree/master/udemy">download
@@ -355,8 +355,8 @@
             <strong>GitHub</strong></a>.</dd>
 
             <dt><a
-            href="http://o2js.com/J1V3R0Ckz/efficient-javascript/index.html">Eff
-            icient JavaScript @jive &raquo;&raquo;</a></dt>
+            href="http://o2js.com/J1V3R0Ckz/efficient-javascript/index.html"
+            >Efficient JavaScript @jive »»</a></dt>
             <dd>A condensed version of the above, presented at
             <strong><a href="http://jivesoftware.com/">Jive
             Software</a></strong> HQ.</dd>
