updated index; added quick links.

--- a/index.html
+++ b/index.html
@@ -207,7 +207,21 @@
         </header>
 
         <section>
-        	<h2>About Me</h2>
+            <h2>Quick Links</h2>
+
+            <ul>
+            <li><a href="https://o2js.com/interview-questions"><strong>Ace</strong> your <strong>JavaScript Interview Questions</strong> (<em>ebook</em>) »»</a></li>
+            <li><a href="https://bit.ly/bytesized">Watch <strong>Byte-Sized JavaScript</strong> (<em>screencast</em>) »»</a></li>
+            <li><a href="https://github.com/jsbites">Browse the source code of <strong>Byte-Sized JavaScript</strong> »»</a></li>
+            <li><a href="https://speakerdeck.com/volkan">View the slide decks of my former <strong>talks</strong> »»</a></li>
+            <li><a href="https://github.com/v0lkan/talks">Get the source code of my former <strong>talks</strong> »»</a></li>
+            <li><a href="https://github.com/v0lkan">Check out my <strong>GitHub Profile</strong> »»</a></li>
+            <li><a href="https://linkedin.com/in/volkanozcelik">Get in touch with me on <strong>LinkedIn</strong> »»</a></li>
+            <li><a href="http://twitter.com/linkibol">Follow me on <strong>Twitter</strong> »»</a></li>
+        </section>
+
+        <section>
+            <h2>About Me</h2>
 
             <p>I’ve been in the industry <strong>since 2003</strong>;<br>
             and this is the place where I brag about all the cool stuff I do.</p>
@@ -442,15 +456,16 @@
          <section>
             <h2>I {[Code]}</h2>
 
-            <h3>Side Projects</h3>
+            <p><br>Oh, by the way, I am a relentless <strong>side projector</strong>.</p>
+ 
+            <p>Most of my side projects are <strong>open source</strong><br> 
+            and I maintain them either <a href="https://github.com/v0lkan">under 
+            my personal <strong>GitHub</strong> account</a>,<br> 
+            or <a href="https://github.com/orgs/jsbites/">under the
+            <strong>Byte-Sized JavaScript</strong> organization’s GitHub account</a>.</p>
 
-            <p>Oh, by the way, <a
-            href="https://o2js.com/reference/personal/my-side-projects"
-            >I am a relentless <strong>side projector</strong></a> and I keep
-            most of my side project <a href="https://github.com/v0lkan">on 
-           <strong>GitHub</strong></a>. So if you want to contribute, or share 
-           your comments and suggestions, you are more than welcome to do so.
-           </p>
+            <p>If you want to contribute or share your comments and suggestions,<br>
+            you are more than welcome to do so.</p>
         </section>
 
         <nav>
