updated the index.

--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
             <h2>Quick Links</h2>
 
             <ul>
-            <li><a href="https://o2js.com/interview-questions"><strong>Ace</strong> your <strong>JavaScript Interview Questions</strong> (<em>ebook</em>) »»</a></li>
+            <li><a href="https://o2js.com/interview-questions"><strong>Ace</strong> your <strong>JavaScript Interviews</strong> (<em>ebook</em>) »»</a></li>
             <li><a href="https://bit.ly/bytesized">Watch <strong>Byte-Sized JavaScript</strong> (<em>screencast</em>) »»</a></li>
             <li><a href="https://github.com/jsbites">Browse the source code of <strong>Byte-Sized JavaScript</strong> »»</a></li>
             <li><a href="https://speakerdeck.com/volkan">View the slide decks of my former <strong>talks</strong> »»</a></li>
             <li><a href="https://github.com/v0lkan/talks">Get the source code of my former <strong>talks</strong> »»</a></li>
-            <li><a href="https://github.com/v0lkan">Check out my <strong>GitHub Profile</strong> »»</a></li>
+            <li><a href="https://github.com/v0lkan">Check out my <strong>GitHub</strong> Profile »»</a></li>
             <li><a href="https://linkedin.com/in/volkanozcelik">Get in touch with me on <strong>LinkedIn</strong> »»</a></li>
             <li><a href="http://twitter.com/linkibol">Follow me on <strong>Twitter</strong> »»</a></li>
         </section>
@@ -277,9 +277,8 @@
             <h2>I Cast</h2>
 
             <p>I weekly publish <a href="https://www.youtube.com/channel/UC8OLZSlFO8cwRo9M30v-TkA"><strong>Byte-Sized JavaScript</strong></a>:<br>
-            a short (<em>~5min per episode</em>), yet information-packed, 
-            screencast about <strong>JavaScript</strong> and 
-            <strong>related technologies</strong>.</p>
+            a short (<em>five-to-ten minuntes per episode</em>), yet information-packed,<br>
+            screencast about <strong>JavaScript</strong> and <strong>related technologies</strong>.</p>
         </section>
 
         <section>
