--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html>
     <head>
-        <title>Volkan Özçelik</title>
+        <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
+
+        <title>Volkan Özçelik</title>
+
         <meta name="description" content="About Volkan Özçelik; who I am and the cool stuff I do.">
-        <meta name="keywords" content="Volkan, Volkan Özçelik, developer, public speaker, front end, back end, devops, full stack, performance nerd, scalability freak, JavaScript">
+        <meta name="keywords" content="Volkan, Volkan Özçelik, developer, public speaker, front end, back end,
+            devops, full stack, performance nerd, scalability freak, JavaScript">
 
         <link href="//cloud.webtype.com/css/1fa83ac3-90eb-426f-8d4c-496c082fce54.css" rel="stylesheet" type="text/css">
 
@@ -234,13 +238,16 @@
             <h2>Quick Links</h2>
 
             <ul>
-            <li><a href="https://o2js.com/interview-questions"><strong>Ace</strong> your <strong>JavaScript Interviews</strong> (<em>ebook</em>) »»</a></li>
+            <li><a href="https://o2js.com/interview-questions"><strong>Ace</strong> your
+            <strong>JavaScript Interviews</strong> (<em>ebook</em>) »»</a></li>
             <li><a href="https://bytesized.tv/">Watch the <strong>Byte-Sized JavaScript</strong> screencast »»</a></li>
-            <li><a href="https://github.com/jsbites">Browse the source code of <strong>Byte-Sized JavaScript</strong> »»</a></li>
+            <li><a href="https://github.com/jsbites">Browse the source code of
+            <strong>Byte-Sized JavaScript</strong> »»</a></li>
             <li><a href="https://speakerdeck.com/volkan">View the slide decks of my <strong>talks</strong> »»</a></li>
             <li><a href="https://github.com/v0lkan/talks">Get the source code of my <strong>talks</strong> »»</a></li>
             <li><a href="https://github.com/v0lkan">Check out my <strong>GitHub</strong> Profile »»</a></li>
-            <li><a href="https://linkedin.com/in/volkanozcelik">Get in touch with me on <strong>LinkedIn</strong> »»</a></li>
+            <li><a href="https://linkedin.com/in/volkanozcelik">Get in touch with me on
+            <strong>LinkedIn</strong> »»</a></li>
             <li><a href="http://twitter.com/linkibol">Follow me on <strong>Twitter</strong> »»</a></li>
             </ul>
         </section>
@@ -301,7 +308,7 @@
         <section>
             <h2>I Cast</h2>
 
-            <p>I weekly publish <a href="https://www.youtube.com/channel/UC8OLZSlFO8cwRo9M30v-TkA"><strong>Byte-Sized JavaScript</strong></a>:<br>
+            <p>I monthly publish <a href="https://bytesized.tv"><strong>Byte-Sized JavaScript</strong></a>:<br>
             a short (<em>five-to-ten minuntes per episode</em>), yet information-packed,<br>
             screencast about <strong>JavaScript</strong> and <strong>related technologies</strong>.</p>
         </section>
