--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                 font-size: 48px;
 
 
-
+                width: 100%;
+                margin-left: 0;
 
 
                 color: rgba(0,0,0,.85);
@@ -94,8 +95,8 @@
                 -moz-osx-font-smoothing: auto;
                 font-size: 20px;
                 position: relative;
-                left: 10px;
                 top: -5px;
+                left: -7px;
                 opacity: 0.65;
                 color: #09528A;
             }
@@ -324,6 +325,10 @@
 
                 -webkit-font-smoothing: antialiased;
                 -moz-osx-font-smoothing: grayscale;
+
+                text-shadow: 2px 2px 14px rgba(255,204,51,0.36),
+                -2px -2px 14px rgba(255,204,51,0.36);
+
             }
 
             .quick-links li a strong {
