--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ ga('send', 'pageview');
 
     <blockquote>
     <p><strong>Psst…</strong> If you want me to talk in your tech event
-    <a href="mailto:volkan@o2js.com">just shoot me an email</a>.<br>
+    <a href="mailto:me@volkan.io">just shoot me an email</a>.<br>
     I’m highly motivated and I’d <strong>love</strong> to be there
     if my time permits.
     </p>
@@ -430,9 +430,12 @@ ga('send', 'pageview');
     <h2>I Write</h2>
 
     <p>I have a book about <strong><a
-    href="https://o2js.com/interview-questions">JavaScript Interview
-    Questions</a></strong>. Also, I’ve done technical editing for books
-    and I’ve written blog posts and technical articles in various mediums.</p>
+    href="https://bytesized.tv/interview-questions">JavaScript Interview
+    Questions</a></strong> (<em>it’s a bit dated; however, you will still find
+    time-independent tips and tricks related to JavaScript and what to expect
+    from a technical interview in the Silicon Valley</em>). I’ve also done 
+    technical editing for books and I’ve written blog posts and technical 
+    articles in various mediums.</p>
 
     <p>That said, nowadays I’m more into
     <a href="https://bytesized.tv"><strong>screencasting</strong></a>.</p>
