updates to reflect the stuff I do recently

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
 </head>
 
 <body>
-  <div class="to-zero-to-hero" id="z2hjs" style="width:750px;margin: 0 auto;margin-top:30px;margin-bottom:10px;">
+  <!-- div class="to-zero-to-hero" id="z2hjs" style="width:750px;margin: 0 auto;margin-top:30px;margin-bottom:10px;">
     <p style="line-height:2.4em;text-align:center;width: 750px;margin: 0 auto;margin-bottom:10px;margin-top:10px;">
       <strong>Who else wants to take their JavaScript to the next level</strong>?
       <br>
@@ -390,7 +390,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
       <br> …👆 psst I am teaching that course, and the content is
       <strong>awesome</strong>! 😉
     </p>
-  </div>
+  </div -->
   <script>
     (function() {
       const div = document.getElementById('z2hjs');
@@ -444,8 +444,8 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
           <strong>Technical Lead</strong> at
           <a href="http://cisco.com/">
             <strong>Cisco</strong>
-          </a>, focusing on
-          <strong>front-end performance</strong>.</p>
+          </a>, improving
+          <strong>performance</strong> across the fabric.</p>
 
         <p>As an engineer, I solve
           <strong>problems</strong>: The context, the origin, or the nature of the problems
@@ -471,8 +471,8 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
             love and use.</p>
         </blockquote>
 
-        <p>While doing all these, I love to write an amazingly well-organized
-          <strong>JavaScript</strong> too.</p>
+<!--        <p>While doing all these, I love to write an amazingly well-organized-->
+<!--          <strong>JavaScript</strong> too.</p>-->
 
         <h2>Always Curious</h2>
 
@@ -530,29 +530,29 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
           <strong>interactive</strong>
           in the near future; who knows.</p>
 
-        <ul style="margin-left: 0px">
-          <li>
-            <p>Nowadays, the majority of my
-              <em>“free”</em> time goes to
-              <a href="https://zerotoherojs.com/" style="display:inline;">JavaScript: from
-                <strong>zero</strong> to
-                <strong>hero</strong>
-              </a>.
-            </p>
-          </li>
-          <li>
-            <p>Other than that, I
-              <a href="https://bytesized.tv" style="display:inline;">
-                <strong>screencast</strong> on
-                <strong>bytesized.tv</strong>
-              </a>.</p>
-          </li>
-          <li>
-            <p>And I also
-              <a href="https://soundcloud.com/v0lkan/" style="display:inline;">
-                <strong>podcast</strong> once or twice a month</a>.</p>
-          </li>
-        </ul>
+<!--        <ul style="margin-left: 0px">-->
+<!--          <li>-->
+<!--            <p>Nowadays, the majority of my-->
+<!--              <em>“free”</em> time goes to-->
+<!--              <a href="https://zerotoherojs.com/" style="display:inline;">JavaScript: from-->
+<!--                <strong>zero</strong> to-->
+<!--                <strong>hero</strong>-->
+<!--              </a>.-->
+<!--            </p>-->
+<!--          </li>-->
+<!--          <li>-->
+<!--            <p>Other than that, I-->
+<!--              <a href="https://bytesized.tv" style="display:inline;">-->
+<!--                <strong>screencast</strong> on-->
+<!--                <strong>bytesized.tv</strong>-->
+<!--              </a>.</p>-->
+<!--          </li>-->
+<!--          <li>-->
+<!--            <p>And I also-->
+<!--              <a href="https://soundcloud.com/v0lkan/" style="display:inline;">-->
+<!--                <strong>podcast</strong> once or twice a month</a>.</p>-->
+<!--          </li>-->
+<!--        </ul>-->
 
       </section>
 
@@ -567,7 +567,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
           <li>Widgets, APIs,
             <strong>Microservices</strong>;</li>
           <li>And
-            <strong>JavaScript</strong>!</li>
+            <strong>Serverless Architectures</strong>!</li>
         </ul>
 
         <dl>
@@ -580,7 +580,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
           <dd>
             <a href="https://speakerdeck.com/volkan/the-secrets-of-high-performance-mobile-javascript-applications">The Secrets of
               <strong>High Performance</strong> Mobile
-              <strong>JavaScript</strong> Applications
+              Applications
             </a>
           </dd>
           <dd>
@@ -590,14 +590,14 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
             <a href="https://speakerdeck.com/volkan/mobile-application-performance-tips">Mobile Application
               <strong>Performance</strong> Tips</a>
           </dd>
-          <dd>
-            <a href="https://speakerdeck.com/volkan/efficient-javascript">Efficient
-              <strong>JavaScript</strong>
-            </a>
-          </dd>
+<!--          <dd>-->
+<!--            <a href="https://speakerdeck.com/volkan/efficient-javascript">Efficient-->
+<!--              <strong>JavaScript</strong>-->
+<!--            </a>-->
+<!--          </dd>-->
           <dd>
             <a href="https://speakerdeck.com/volkan/javascript-widget-development-best-practices">
-              <strong>JavaScript</strong> Widget Development Best Practices</a>
+              Widget Development Best Practices</a>
           </dd>
         </dl>
 
@@ -610,39 +610,39 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
         </p>
       </blockquote> -->
 
-        <blockquote>
-          <p>Though, recently I started speaking less at conferences because, nowadays,
-            I am focusing more on creating
-            <a href="https://zerotoherojs.com">lessons</a>,
-            <a href="https://bytesized.tv">screencasts</a>, and
-            <a href="https://soundcloud.com/v0lkan">podcasts</a> about how to be a good
-            <strong>JavaScript</strong>
-            developer in particular and how to be a good developer in general.
-          </p>
-        </blockquote>
+<!--        <blockquote>-->
+<!--          <p>Though, recently I started speaking less at conferences because, nowadays,-->
+<!--            I am focusing more on creating-->
+<!--            <a href="https://zerotoherojs.com">lessons</a>,-->
+<!--            <a href="https://bytesized.tv">screencasts</a>, and-->
+<!--            <a href="https://soundcloud.com/v0lkan">podcasts</a> about how to be a good-->
+<!--            <strong>JavaScript</strong>-->
+<!--            developer in particular and how to be a good developer in general.-->
+<!--          </p>-->
+<!--        </blockquote>-->
 
 
-        <p>
-          <strong>Why</strong>? Because although creating screencasts take a lot of time,
-          when you compare it to prepping for a tech talk, they are a breeze:</p>
+<!--        <p>-->
+<!--          <strong>Why</strong>? Because although creating screencasts take a lot of time,-->
+<!--          when you compare it to prepping for a tech talk, they are a breeze:</p>-->
 
-        <ul>
-          <li>It takes just a fraction of the time and energy that I spend on a conference
-            prep.
-          </li>
-          <li>I can do it on my own schedule, so it is less stressful.</li>
-          <li>I can revise and edit things even after I deliver them.</li>
-        </ul>
+<!--        <ul>-->
+<!--          <li>It takes just a fraction of the time and energy that I spend on a conference-->
+<!--            prep.-->
+<!--          </li>-->
+<!--          <li>I can do it on my own schedule, so it is less stressful.</li>-->
+<!--          <li>I can revise and edit things even after I deliver them.</li>-->
+<!--        </ul>-->
 
-        <blockquote>
-          <p>Though I miss the stage.
-            <strong>Constantly</strong>.</p>
-        </blockquote>
+<!--        <blockquote>-->
+<!--          <p>Though I miss the stage.-->
+<!--            <strong>Constantly</strong>.</p>-->
+<!--        </blockquote>-->
 
-        <p>The adrenaline rush of being
-          <strong>on</strong> the stage, connecting with the community, exchanging ideas
-          with other speakers, and getting feedback from the audience:
-          <strong>That’s priceless</strong>!</p>
+<!--        <p>The adrenaline rush of being-->
+<!--          <strong>on</strong> the stage, connecting with the community, exchanging ideas-->
+<!--          with other speakers, and getting feedback from the audience:-->
+<!--          <strong>That’s priceless</strong>!</p>-->
 
         <blockquote>
           <p>Being a public speaker is the most
@@ -657,15 +657,15 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
           add a tech talk prep to my agenda, I’ll rush back on the stage!
           <p/>
 
-          <blockqoute>
-            <p>I may also become a developer advocate
-              <em>(which also is something that I’m seriously thinking about)</em> then
-              I can find much more time to be on the stage too, as it will be part
-              of my job to be there—That actually fits really well with my character.
-            </p>
-          </blockqoute>
+<!--          <blockqoute>-->
+<!--            <p>I may also become a developer advocate-->
+<!--              <em>(which also is something that I’m seriously thinking about)</em> then-->
+<!--              I can find much more time to be on the stage too, as it will be part-->
+<!--              of my job to be there—That actually fits really well with my character.-->
+<!--            </p>-->
+<!--          </blockqoute>-->
 
-          <p>So we’ll see how it goes 😉.</p>
+          <p>We’ll see how it goes 😉.</p>
       </section>
 
       <section>
