updates to reflect the stuff I do recently

--- a/index.html
+++ b/index.html
@@ -419,21 +419,36 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
 
       <section>
         <ul class="quick-links">
+<!--          <li>-->
+<!--            <a href="https://bytesized.tv/">-->
+<!--              <strong>My Screencasts</strong>-->
+<!--            </a>-->
+<!--          </li>-->
+<!--          <li>-->
+<!--            <a href="https://speakerdeck.com/volkan">-->
+<!--              <strong>My Talks</strong>-->
+<!--            </a>-->
+<!--          </li>-->
+
           <li>
-            <a href="https://bytesized.tv/">
-              <strong>My Screencasts</strong>
-            </a>
+            <a href="https://twitter.com/linkibol">
+              <strong>Follow Me</strong><br>
+              <em>twitter</em></a>
           </li>
-          <li>
-            <a href="https://speakerdeck.com/volkan">
-              <strong>My Talks</strong>
-            </a>
-          </li>
+
           <li>
             <a href="https://linkedin.com/in/volkanozcelik">
-              <strong>Get In Touch</strong> (
-              <em>LinkedIn</em>)</a>
+              <strong>Get In Touch</strong><br>
+              <em>LinkedIn</em></a>
           </li>
+
+
+          <li>
+            <a href="https://github.com/v0lkan">
+              <strong>Use the Source</strong><br>
+              <em>GitHub</em></a>
+          </li>
+
         </ul>
       </section>
 
